tests/e2e/ui/auto_register_type_wrong_item.stderr
error: Only allowed on Struct Or Enum items
 --> tests/e2e/ui/auto_register_type_wrong_item.rs:7:1
  |
7 | #[auto_register_type(plugin = TestPlugin)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_register_type` (in Nightly builds, run with -Z macro-backtrace for more info)
